<resources>
    <string name="app_name">Around</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="application_name_pt">Go Around</string>
    <string name="conta_pt">Entrar Com Conta</string>
    <string name="sem_conta_pt">Entrar Como Anonimo</string>
    <string name="login_pt">Login</string>
    <string name="login_email_pt">Email</string>
    <string name="login_pass_pt">Password</string>
    <string name="remember_pt">Lembre-me</string>
    <string name="logar_pt">Entrar</string>
    <string name="reset_pass_pt"><u>Esqueceu-se da password?</u></string>
    <string name="nova_conta_pt"><u>Ainda não tem conta?</u></string>
    <string name="report_pt">Reportar Problema</string>
    <string name="see_report_pt">Ver Problemas Reportados</string>
    <string name="anotation_pt">Fazer uma Anotação</string>
    <string name="suporte_pt">Suporte</string>
    <string name="credits_pt">Créditos</string>
    <string name="settings_pt">Definições</string>
    <string name="logout_pt">Logout</string>
    <string name="operations_pt">Operações</string>
    <string name="informations_pt">Informações</string>
    <string name="account_pt">Conta</string>
    <string name="description_pt">Uma app desenvolvida para o guiar no seu dia à dia no que toca ao seus percursos e eventuias obstáculos encontrados a usufruir dos mesmos.</string>
    <string name="add_nota">Adicionar Nota</string>
    <string name="desceicao_nota">Insira uma Descrição</string>
    <string name="add">Adicionar</string>
    <string name="notas">Notas</string>
    <string name="notas_menu">Manipulação de Notas</string>
    <string name="delete">Apagar</string>
    <string name="confirm">Confirmar</string>
    <string name="anonimo">Anónimo</string>
    <string name="report">Reportar</string>
    <string name="erro">Erro</string>
    <string name="tamanho">Tamanho Excedido</string>
    <string name="sucesso">Sucesso</string>
    <string name="nota_apagada">Nota Apagado Com Sucesso!</string>
    <string name="nota_atualizada">Nota Atualizada Com Sucesso!</string>
    <string name="carregar_foto">Carregar foto</string>
    <string name="titulo">Titulo</string>
    <string name="descricao">Descrição</string>
    <string name="novo_marcador">Novo Marcador</string>
    <string name="credenciais">Credências Incorretas!</string>
    <string name="webservice">Erro de Webservice</string>
    <string name="permissions_ok">Permissões Concedidas!</string>
    <string name="permissions_denied">Permissões Negadas!</string>
    <string name="image_saved">Imagem Guardada!</string>
    <string name="image_not_saved">Imagem não guardada!</string>
    <string name="report_done">Problema Reportado com Sucesso!</string>
    <string name="report_error">Erro ao Marcar Ponto</string>
    <string name="conexao">Por Favor Verifique a Sua Conexão!</string>
    <string name="ativar_gps">O seu GPS encontra-se desativado, pretende ativálo?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="reports">Os Meus Reports</string>
    <string name="info_ponto">Adicionar Novo Ponto</string>
    <string name="desc_info_ponto">Para inserir um ponto numa localização que não a atual, por favor faça hold do ecrãn.</string>
    <string name="pagina_inicial">Página Inicial</string>
    <string name="creditos">Leandro Wilson da Costa Trigo\nInstituto Politécnico de Viana do Castelo\n3º Ano Engenharia Informática</string>
    <string name="credits">Créditos</string>
    <string name="email_client">Escolha um cliente de email</string>
    <string name="telemovel">Télemovel</string>
    <string name="call">Ligar</string>
    <string name="enviar_email">Enviar Email</string>
    <string name="ponto_updated">Ponto Atualizado com Sucesso!</string>
    <string name="ponto_deleted">Ponto Eliminado com Sucesso!</string>
    <string name="email_existe">O Email Introduzido já se Encontra Registado!</string>
    <string name="escolher_imagem">Por Favor Escolha uma Imagem!</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="sensor">Sensor de Passos não Disponivel!</string>
    <string name="definitions">Defenições</string>
    <string name="language">Linguagem Atualizada com Sucesso!</string>
    <string name="chose_language">Escolha a sua Liguagem</string>
    <string name="notification">Notificação</string>
    <string name="mapa">Em caso de dúvida entre em contacto!</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="finger1">O seu Dispositivo não Suporta Autenticação por Impressão Digital</string>
    <string name="finger2">Por favor Autorize o uso de Impressão Digital nas suas Definições.</string>
    <string name="finger3">Sem Impressões Digitais Registadas\n Por Favor Registe uma nas suas Definições!</string>
    <string name="finger4">Por favor Lige a Impressão Digital nas suas Definições de Segurança!</string>
    <string name="finger5">Falha ao Autenticar-se</string>
    <string name="finger6">Erro ao Autenticar-se</string>
    <string name="erro_eliminar_conta">Ocorreu um Erro ao Eliminar a Conta!</string>
    <string name="eliminar_conta">Eliminar Conta</string>
    <string name="apagar_conta">Apagar Conta</string>
</resources>
