<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/operations_pt">
    <menu>
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/report"
            android:title="@string/report_pt" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/place"
            android:title="@string/see_report_pt"/>
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/anotations"
            android:title="@string/anotation_pt" />
    </menu>
    </item>


    <item android:title="@string/informations_pt">
        <menu>
            <item
                android:id="@+id/nav_sup"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/suporte_pt" />
            <item
                android:id="@+id/nav_credits"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/credits_pt" />
        </menu>
    </item>


    <item android:title="@string/account_pt">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings_pt" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout_pt" />
        </menu>
    </item>

</menu>
