<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_linguagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        />

    <ImageView
        android:id="@+id/pick_language_pt"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="50dp"
        android:background="@drawable/portugal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_linguagem"/>


    <ImageView
        android:id="@+id/pick_language_en"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="50dp"
        android:background="@drawable/english"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pick_language_pt"/>


    <TextView
        android:id="@+id/text_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apagar_conta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pick_language_en"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="30sp"
        />

    <Button
        android:id="@+id/button_finger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/eliminar_conta"
        android:background="#ff0000"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_conta"/>




</androidx.constraintlayout.widget.ConstraintLayout>